<resources>
    <string name="app_name">Aliva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="summer_hotels">Summer Hotels</string>
    <string name="location">Location</string>
    <string name="proceed_to_booking">Proceed to booking</string>
    <string name="starting_from">Starting from </string>
    <string name="search">Search..</string>
    <string name="discounts">Discounts</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="trending_hotels">Trending Hotels</string>
    <string name="admin">Admin</string>
    <string name="price_per_night">Price per night</string>
    <string name="dollarSign">$</string>
    <string name="nights_stayed">Nights Stayed</string>
    <string name="to">TO</string>
    <string name="from">From</string>
    <string name="name_on_card">Name on card</string>
    <string name="your_name_on_card">Your Name On Card...</string>
    <string name="number_on_card">Number on card</string>
    <string name="your_card_number">Your Card Number...</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="security_code">Security Code</string>
    <string name="postal_code">Postal Code</string>
    <string name="proceed">Proceed</string>
    <string name="enter_hotel_id">Enter Hotel ID</string>
    <string name="hotel_id">Hotel ID..</string>
    <string name="delete">delete</string>
    <string name="delete_an_hotel">delete an Hotel</string>
    <string name="update">Update</string>
    <string name="update_an_hotel">update an Hotel</string>
    <string name="add">Add</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
</resources>