<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/app_background"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/searchBar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="32dp"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:autofillHints=""
            android:background="@drawable/edittext_background"
            android:hint="@string/search"
            android:textColor="@color/brown"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/summerHotelsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/summer_hotels"
            android:textColor="@color/brown"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/searchBar"
            app:layout_constraintTop_toBottomOf="@id/searchBar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/summerHotelRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summerHotelsTV"
            tools:listitem="@layout/home_summer_hotel_item" />

        <TextView
            android:id="@+id/DiscountsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discounts"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/searchBar"
            app:layout_constraintTop_toBottomOf="@id/summerHotelRV" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/HomeDiscountsRV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="@id/summerHotelRV"
            app:layout_constraintTop_toBottomOf="@id/DiscountsTV"
            tools:listitem="@layout/home_discounts_hotel_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>