<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/app_background">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/golden"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hotelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:text="Test"
        android:textColor="@color/brown"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="@string/location"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="@id/hotelName"
        app:layout_constraintTop_toBottomOf="@id/hotelName" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="Description"
        android:textColor="@color/brown"
        app:layout_constraintStart_toStartOf="@id/hotelName"
        app:layout_constraintTop_toBottomOf="@id/location" />

    <ImageView
        android:id="@+id/star"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/ic_baseline_star_24"
        app:layout_constraintBottom_toBottomOf="@id/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/location" />

    <TextView
        android:id="@+id/ratingTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        tools:text="2.5"
        android:textColor="@color/brown"
        android:textSize="11sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/star"
        app:layout_constraintEnd_toStartOf="@id/star"
        app:layout_constraintTop_toTopOf="@id/star" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        tools:text="EGP 3,589"
        android:textColor="@color/brown"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/star"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:layout_marginTop="32dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/starting_from"
        android:textColor="@color/brown"
        app:layout_constraintEnd_toStartOf="@id/price"
        app:layout_constraintTop_toTopOf="@id/price" />

    <Button
        android:layout_width="265dp"
        android:layout_height="50dp"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/red"
        android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
        android:text="@string/proceed_to_booking"
        android:textColor="@color/app_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/star" />

</androidx.constraintlayout.widget.ConstraintLayout>